<resources>
    <string name="app_name">ParkDublin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Info</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="live_feed_popup">The live feed is updated every \n 5 mins</string>
...
    <string name="car_number_plate">Car Number Plate</string>
    <string name="pay_now">Pay Now</string>
    <string name="email">Email</string>

    <string name="show_password">Show Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>

    <string name="login">Login</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="register">Register</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
...
